Fix content z-index

--- a/sources/stylesheets/utils/_paddings.scss
+++ b/sources/stylesheets/utils/_paddings.scss
@@ -1,6 +1,7 @@
 .pad_ {
   &container {
     padding: 40px 32px 32px;
+    z-index: 0;
 
     &:hover {
       z-index: 1;
